# dev-templates

./: .gitignore  README.md  flake.nix
bevy/: Cargo.toml  flake.nix
bevy/.cargo/: config.toml
go/: flake.nix
gpui/: .gitignore  Cargo.toml  flake.nix
gpui/nix/: default.nix
gpui/src/: main.rs
gtk-rs/: Cargo.toml  flake.nix
gtk-rs/nix/: default.nix
gtk-rs/src/: main.rs
node/: flake.nix
rust/: flake.nix  rust-toolchain.toml
rust-project/: .gitignore  flake.nix
rust/nix/: default.nix
typescript/: flake.nix
wasm/: .gitignore  Cargo.toml  Justfile  flake.nix  rust-toolchain.toml
wasm/examples/: fibonacci.rs
wasm/src/: lib.rs  main.rs
wayland-rs/: Cargo.toml  flake.nix  rust-toolchain.toml
wayland-rs/nix/: default.nix
wayland-rs/src/: main.rs
