[package]
name = "hello_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }


# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"
